# 5HWMX

./: CMakeLists.txt  determ.cpp
matrix/: CMakeLists.txt  matrix.hpp  test.sh  testmatrix.cpp
matrix/tests/: t0.test  t4.test  t8.test  test.sh
matrix/tests/determinantTests/: t1.test  t2.test  t3.test  t5.test  t6.test  t7.test
matrix/tests/unitTest/: traceFunction.txt  traceLog.txt
